Containing Movement Inside a Fixed Area

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "tink": "https://github.com/kittykatattack/tink.git",
     "scaleToWindow": "https://github.com/kittykatattack/scaleToWindow.git",
-    "keyboard": "https://github.com/kittykatattack/keyboard.git"
+    "keyboard": "https://github.com/kittykatattack/keyboard.git",
+    "contain": "https://github.com/kittykatattack/contain.git"
   }
 }
