--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development gulp && cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "rm -rf ./dist && gulp build && cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build": "rm -rf ./dist && gulp && cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
